--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "throw-me",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
@@ -30,5 +30,9 @@
     "express": "^5.2.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wminaung/throw-me.git"
   }
 }
